Fixed some overlap, still has minor horizontal scrolling

--- a/src/preparationWidget/PreparationWidget.scss
+++ b/src/preparationWidget/PreparationWidget.scss
@@ -9,6 +9,7 @@
     grid-gap: 1em;
     justify-items: stretch;
     align-items: flex-start;
+    overflow: hidden;
     grid-template-areas:
         "TodaysFlightTitle WeatherTitle LoadsheetTitle LoadsheetTitle"
         "TodaysFlightCard  OriginWxCard PayloadCard    FuelCard"
